# cere

./: .gitignore  .travis.yml  CHANGELOG  Dockerfile  INSTALL.md  Makefile  Makefile.am  README.md  Readme  THANKS  TODO  autogen.sh  cere  configure.ac  test.sh
.github/workflows/: test-build.yml
benchmarks/NPB2.3-SER/: run-bench.sh
benchmarks/NPB3.0-SER/: run-bench.sh
cere/: __main__.py
cere/cere_configure/: __init__.py
cere/cere_dump/: __init__.py
cere/cere_filter/: __init__.py  create_graph.py  granularity.py  graph_utils.py  ilp_selector.py  update_graph.py
cere/cere_instrument/: __init__.py
cere/cere_io_checker/: __init__.py
cere/cere_measure/: __init__.py
cere/cere_profile/: __init__.py  create_graph.py
cere/cere_regions/: __init__.py
cere/cere_replay/: __init__.py
cere/cere_report/: Report.js  __init__.py  template.html
cere/cere_sanity_check/: __init__.py
cere/cere_select_ilp/: __init__.py  granularity.py  update_graph.py
cere/cere_select_max_cov/: __init__.py  (+2 more)
doc/: Makefile.am  cere-capture.1.md  cere-capture.1.ronn  cere-check-io.1.md  cere-check-matching.1.md  cere-configure.1.md  cere-configure.1.ronn  cere-dump.1.ronn  cere-flag.1.md  cere-hybrid.1.md  cere-instrument.1.md  cere-omp-tutorial.1.md  cere-plugin-instr.1.md  cere-profile.1.md  cere-profile.1.ronn  cere-regions.1.md  cere-regions.1.ronn  cere-replay.1.md  cere-replay.1.ronn  cere-report.1.md  cere-select-ilp.1.md  cere-select-max-cov.1.md  cere-selectinv.1.md  cere-trace.1.ronn  cere-tutorial.1.md  cere-tutorial.1.ronn  index.txt
m4/: ax_llvm.m4
memory_dump/: Makefile  dump.c  generate_dump_objects.sh  test.c  test.sh
src/: .gitignore  CMakeLists.txt  LoopExtractorAll  LoopInstrumentation  LoopManager  LoopMemoryDump  Makefile.am  cerec  cerec++  ceref
src/GlobalRename/: GlobalRename.cpp  Makefile.am
src/LoopExtractorAll/: CMakeLists.txt  CodeExtractorAll.cpp  CodeExtractorAll.h  LoopExtractorAll.cpp  Makefile.am
src/LoopInstrumentation/: CMakeLists.txt  LoopInstrumentation.cpp  Makefile.am
src/LoopManager/: CMakeLists.txt  LoopManager.cpp  Makefile.am
src/ParallelInstrument/: Makefile.am  ParallelInstrument.cpp
src/RegionDump/: LoopRegionDump.cpp  Makefile.am  OmpRegionDump.cpp  RegionDump.cpp  RegionDump.h
src/RegionInstrumentation/: LoopRegionInstrumentation.cpp  Makefile.am  OmpRegionInstrumentation.cpp  RegionInstrumentation.cpp  RegionInstrumentation.h
src/RegionOutliner/: LoopRegionOutliner.cpp  Makefile  Makefile.am  OmpRegionOutliner.cpp  RegionExtractor.cpp  RegionExtractor.h  RegionOutliner.cpp
src/RegionReplay/: LoopRegionReplay.cpp  Makefile.am  OmpRegionReplay.cpp  RegionReplay.cpp  RegionReplay.h
src/Report/: Report.js  Report.py  template.html
src/Report/static/css/: jquery.treetable.theme.default.css
src/Report/static/js/: Report.js
src/cache_flush/: Makefile.am  cacheflush.c
src/ccan/: Makefile.am
src/ccc/: ccc.in
src/ccc/lec/: lec.py.in
src/ccc/lel/: Template_realmain.c  instrumentation_wrapper.c  lel.py.in
src/cere/: __init__.py  __main__.py  cere_capture.py  cere_ccc.py  cere_check_io.py  cere_check_matching.py  cere_configure.py  cere_flag.py  cere_hybrid.py  cere_instrument.py  cere_profile.py  cere_regions.py  cere_replay.py  cere_report.py  cere_sanity_check.py  cere_select_ilp.py  cere_select_max_cov.py  cere_selectinv.py  cere_trace.py  compiler_frontend.py  compress.py  conf.py.in  create_graph.py  errors.py  granularity.py  graph_error.py  graph_utils.py  ilp_update_graph.py  lec.py  lel.py  max_cov_update_graph.py  regions_selector.py  template.html  template_baremetal_realmain.c  template_realmain.c  utils.py  vars.py  vars.py.in  vars.py.in.in
src/cere/cere_capture/: __init__.py
src/cere/cere_check_io/: __init__.py
src/cere/cere_check_matching/: __init__.py
src/cere/cere_configure/: __init__.py
src/cere/cere_dump/: __init__.py
src/cere/cere_flag/: __init__.py
src/cere/cere_hybrid/: __init__.py
src/cere/cere_instrument/: __init__.py
src/cere/cere_profile/: __init__.py  create_graph.py
src/cere/cere_regions/: __init__.py
src/cere/cere_replay/: __init__.py
src/cere/cere_report/: __init__.py  graph_error.R  graph_error.py
src/cere/cere_sanity_check/: __init__.py
src/cere/cere_select_ilp/: __init__.py  granularity.py  update_graph.py
src/cere/cere_select_max_cov/: __init__.py  regions_selector.py  update_graph.py
src/cere/cere_selectinv/: __init__.py
src/cere/cere_test/: __init__.py
src/cere/cere_trace/: __init__.py
src/cere/common/: __init__.py  errors.py  flags.csv  graph_utils.py  utils.py  variables.py
src/granularity/: clusterize_invocations.R  compute_coverage_matching.R  compute_matching.R  coverage.sh  find_loop_levels.py  fusion.py  granularity.py  graph_error.R  matching.sh  plot_trace.gnu  run_coverage_and_matching.sh
src/htable/compiler/: compiler.h
src/htable/htable/: htable.c
src/io_detector/: Makefile.am  io_detection_wrapper.c  io_detector.c  io_detector.h
src/lec/: lec  lec.in
src/lel/: Template_realmain.c  lel  lel.in  staticpatcher.py
src/memory_dump/: Makefile  Makefile.am  baremetal_replay.c  cacheflush.c  cere_tracer.c  cere_tracer.h  counters.c  counters.h  debug.h  dump.c  dump.h  generate_dump_objects.sh  hooks.c  interface.h  malloc_hook.c  mallochook.c  mallochook.h  pages.h  ptrace.c  ptrace.h  replay.c  scalar_dump.c  snoop.c  snoop.h  syscall_interface.c  syscall_interface.h  test.sh  tracee.c  tracee.h  tracee_hooks.c  tracee_interface.c  tracee_manual.h  tracer  tracer.c  tracer.h  tracer_interface.c  tracer_interface.h  tracer_mem.c  tracer_mem.h  types.h  (+1 more)
src/memory_dump/memory_dump/: cere-tracer  pages.h  ptrace.h  replay.c  tracee.c  tracee_hooks.c  tracee_interface.c  tracee_interface.h  tracer_interface.h
src/memory_dump/tests/: test01.c  test02.c  test03.c
src/rdtsc/: Makefile  Makefile.am  density_error.R  matching.sh  plot_codelets.R  rdtsc.c  rdtsc.cpp  rdtsc.h  rdtsc_wrapper.c  test.c
src/rdtsc/htable/htable/: htable.h
tests/: Makefile.am  source.sh  test.sh  testplan.test
tools/: check-code.sh
(+815 files in other folders)
